# boid

./: Cargo.toml  README.md
examples/: piston.rs
src/: boid.rs  lib.rs  main.rs  point.rs  vector.rs  world.rs
website/: package-lock.json  package.json
website/src/pages/: index.tsx
