[package]
name = "boid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
# piston = "0.53.2"
# piston_window = "0.128.0"
rand = "0.8.5"
wasm-bindgen = "0.2.84"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
getrandom = { version = "0.2.9", features = ["js"] }
